<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PerfilActivity">

    <ImageView
        android:id="@+id/imageview_voltar_editpefiltoperfil"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_arrow_back_black_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148"
        app:srcCompat="@mipmap/ic_avatar_round" />

    <EditText
        android:id="@+id/inputNome"
        android:layout_width="185dp"
        android:layout_height="44dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_person_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="Nome"
        android:inputType="text"
        android:padding="8dp"
        android:text="@string/name"
        android:textColorHint="@color/colorBlack"
        android:textColorLink="#8C8C8C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <EditText
        android:id="@+id/inputSobrenome"
        android:layout_width="185dp"
        android:layout_height="44dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_person_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="Sobrenome"
        android:inputType="text"
        android:padding="8dp"
        android:text="@string/second_name"
        android:textColorHint="@color/colorBlack"
        android:textColorLink="#8C8C8C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNome"
        app:layout_constraintVertical_bias="0.055" />

    <EditText
        android:id="@+id/inputEmailCadastro"
        android:layout_width="354dp"
        android:layout_height="44dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_person_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="E-mail"
        android:inputType="text"
        android:padding="8dp"
        android:text="@string/email"
        android:textColorHint="@color/colorBlack"
        android:textColorLink="#8C8C8C"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSobrenome"
        app:layout_constraintVertical_bias="0.099" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

</androidx.constraintlayout.widget.ConstraintLayout>