<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PerfilActivity">

    <ImageView
        android:id="@+id/imageview_voltar_pefiltolista"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_arrow_back_black_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageview_editperfil"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:layout_marginTop="24dp"
        android:background="@color/colorTransparent"
        android:clickable="true"
        android:src="@drawable/ic_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148"
        app:srcCompat="@mipmap/ic_avatar_round" />

    <TextView
        android:id="@+id/inputNome"
        android:layout_width="185dp"
        android:layout_height="44dp"
        android:drawableStart="@drawable/ic_person_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:padding="8dp"
        android:text="@string/name"
        android:textColorHint="@color/colorBlack"
        android:textColorLink="#8C8C8C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <TextView
        android:id="@+id/inputSobrenome"
        android:layout_width="185dp"
        android:layout_height="44dp"
        android:drawableStart="@drawable/ic_person_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:padding="8dp"
        android:text="@string/second_name"
        android:textColorHint="@color/colorBlack"
        android:textColorLink="#8C8C8C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNome"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/inputEmailCadastro"
        android:layout_width="354dp"
        android:layout_height="44dp"
        android:drawableStart="@drawable/ic_person_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:padding="8dp"
        android:text="@string/email"
        android:textColorHint="@color/colorBlack"
        android:textColorLink="#8C8C8C"
        app:layout_constraintBottom_toTopOf="@+id/switchcompat_tema"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSobrenome"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/btnStatistics"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg"
        android:drawableTop="@drawable/ic_donut_large_24"
        android:text="@string/statistics"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchcompat_tema"
        app:layout_constraintVertical_bias="0.78" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchcompat_tema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tema Escuro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

</androidx.constraintlayout.widget.ConstraintLayout>